--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     // Parceable
     implementation 'org.parceler:parceler-api:1.1.12'
     annotationProcessor 'org.parceler:parceler:1.1.12'
+
+    // Toolbar
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 }
