Added Twitter Compose icon and moved necessary functionality so it activated ComposeActivity - Removed Compose item that was previously in the menu

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,9 @@ dependencies {
 
     // Toolbar
     implementation 'androidx.appcompat:appcompat:1.0.0'
+
+    // Toolbar - React to scrolling
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0-rc01'
 }
